# SAAS-TOOLS

./: .gitignore  LICENSE  README.md  components.json  env_example  next.config.mjs  package-lock.json  package.json  tailwind.config.js  vercel.json
.github/workflows/: main.yml
Docs/Learning/: ReactHooks.mdx
Docs/Ways to meke Money/: RawData.mdx
Ideas-textBook/: RoughIdea.md
app/: Automations.md  Conventions.md  LayersThinking.md  TechnicalDebt.jsx  layout.js  page.js
app/Docs/: Automations.md  Busy.md  Conventions.md  HetznerHosting.md  LayersThinking.md  TechnicalDebt.md
app/X/: Tweet.jsx  action.js  page.jsx
app/_components/: Link.jsx  TabNav.jsx  TabNavigationHeader.jsx  TopProgressBar.jsx  YouTubeIframe.jsx
app/blog/: PrductDiary.md  page.jsx
app/dailyStandup/: action.js  page.jsx
app/landing/: page.jsx
app/life/: actions.js  page.jsx
app/openAI/: actions.js  page.jsx
app/pricing/: page.jsx
app/products/: layout.jsx  page.jsx
app/socialgen/: action.js
auth-feature/: .gitignore  main.py  pyproject.toml
auth-feature/application/: config.py  utils.py
auth-feature/example_crud/: database.py  models.py
donations/: .env.example  .gitignore  donations.py
focused-youtube-carousel/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
lib/: XAPIsupabaseClient.js  googleSheets.js
newsletter_back/: .gitignore  pyproject.toml
newsletter_back/alembic/versions/: 997a107c1ada_new.py
newsletter_back/app/: database.py  email_utils.py  main.py  models.py  routes.py
prisma/: dev.db  dev.db-journal  schema.prisma
(+123 files in other folders)
