[project]
name = "newsletter-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=3.0.2",
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "fastapi>=0.114.0",
    "psycopg2-binary>=2.9.9",
    "pydantic[email]>=2.9.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.34",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.30.6",
]
